[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1